Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/PSET_Permission_Set__c.object-meta.xml
<CustomObject>
    <description>Clone of Native Permission Set Name...used for reporting and parenting other permission objcts</description>
    <label>PSET_Name</label>
    <nameField>
        <label>PSET Permission Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSET_Names</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>