Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/fields/CreatedDate_FromStandard__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_FromStandard__c</fullName>
    <description>This is the mapping field to Created Date in the standard permission set.</description>
    <label>Created Date From Standard</label>
    <type>DateTime</type>
</CustomField>