Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/fields/fxPSET_Category__c.field-meta.xml
<CustomField>
    <fullName>fxPSET_Category__c</fullName>
    <description>This captures the Standardized Naming Convention and uses it as the category</description>
    <formula>IF(CONTAINS(Label__c,&quot;: &quot;)
    ,  UPPER(TRIM(LEFT( Label__c , FIND(&quot;:&quot;,Label__c)-1)))
    ,IF( IsOwnedByProfile__c =true
        ,IF( IsCustom__c =false
            ,&quot;Profile-sfdc&quot;
            ,&quot;Profile-custom&quot;
           )
        ,&#39;Non-Std&#39;
        )
  )</formula>
    <inlineHelpText>This captures the Standardized Naming Convention and uses it as the category</inlineHelpText>
    <label>fxPSET Category</label>
    <type>Text</type>
</CustomField>