Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/fields/IsOwnedByProfile__c.field-meta.xml
<CustomField>
    <fullName>IsOwnedByProfile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOwnedByProfile</label>
    <type>Checkbox</type>
</CustomField>