Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/fields/LastModifiedDate_FromStandard__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate_FromStandard__c</fullName>
    <description>This is mapped to Last Modified Date in the standard permission set.</description>
    <label>Last Modified Date From Standard</label>
    <type>DateTime</type>
</CustomField>