Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/fields/PermissionSetId_FromStandard__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetId_FromStandard__c</fullName>
    <description>This is mapped to PermissionSet ID in the standard permission set.</description>
    <externalId>true</externalId>
    <label>PermissionSet Id From Standard</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>