Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/listViews/PSETS_Counters.listView-meta.xml
<ListView>
    <fullName>PSETS_Counters</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>SVMX,SMAX,Servicemax</value>
    </filters>
    <label>PSETS (Counters)</label>
    <language>en_US</language>
</ListView>