Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/listViews/PSETS_Counters_SVMX.listView-meta.xml
<ListView>
    <fullName>PSETS_Counters_SVMX</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsCustom__c</columns>
    <columns>IsOwnedByProfile__c</columns>
    <columns>CreatedDate_FromStandard__c</columns>
    <columns>CreatedById_FromStandard__c</columns>
    <columns>LastModifiedDate_FromStandard__c</columns>
    <columns>LastModifiedById_FromStandard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SVMX,SMAX,Servicemax</value>
    </filters>
    <label>PSETS (Counters) SVMX</label>
</ListView>