Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/listViews/PSETS_Deactivated.listView-meta.xml
<ListView>
    <fullName>PSETS_Deactivated</fullName>
    <columns>DeactivationDate__c</columns>
    <columns>Label__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsCustom__c</columns>
    <columns>IsOwnedByProfile__c</columns>
    <columns>CreatedDate_FromStandard__c</columns>
    <columns>CreatedById_FromStandard__c</columns>
    <columns>LastModifiedById_FromStandard__c</columns>
    <columns>LastModifiedDate_FromStandard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeactivationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PSETS (Deactivated)</label>
</ListView>