Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/listViews/PSETS_General.listView-meta.xml
<ListView>
    <fullName>PSETS_General</fullName>
    <columns>Label__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>IsCustom__c</columns>
    <columns>IsOwnedByProfile__c</columns>
    <columns>CreatedDate_FromStandard__c</columns>
    <columns>CreatedById_FromStandard__c</columns>
    <columns>LastModifiedById_FromStandard__c</columns>
    <columns>LastModifiedDate_FromStandard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Label__c</field>
        <operation>startsWith</operation>
        <value>GENERAL:</value>
    </filters>
    <label>PSETS (General)</label>
</ListView>