Perkin-UAT/force-app/main/default/objects/PSET_Permission_Set__c/listViews/PSETS_Profiles.listView-meta.xml
<ListView>
    <fullName>PSETS_Profiles</fullName>
    <columns>NAME</columns>
    <columns>IsCustom__c</columns>
    <columns>IsOwnedByProfile__c</columns>
    <columns>LastModifiedById_FromStandard__c</columns>
    <columns>LastModifiedDate_FromStandard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsOwnedByProfile__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>DeactivationDate__c</field>
        <operation>equals</operation>
    </filters>
    <label>PSETS (Profiles)</label>
</ListView>